--- a/weights.html
+++ b/weights.html
@@ -11,10 +11,10 @@
 <body>
     
     <div class="topnav">
-  <a href="#contact">CONTACT US</a>
-  <a href= "explore/explore.html">EXPLORE</a>
-  <a href="#about">ABOUT US</a>
-    <a href="Getfit.html">HOME</a>
+  <a href="contact.html">CONTACT US</a>
+  <a href= "explore.html">EXPLORE</a>
+  <a href="aboutus.html">ABOUT US</a>
+    <a href="index.html">HOME</a>
 </div>
 <div class="tile">
   <img src="images/sleeper.jpg" alt="sleeper">
