--- a/explore.html
+++ b/explore.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-    <title>Get fit (NOT) </title>
+    <title>Explore More </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="main.css">
@@ -12,12 +12,12 @@
     
     <div class="topnav">
   <a href="#contact">CONTACT US</a>
-  <a href= "explore/explore.html">EXPLORE</a>
-  <a href="#about">ABOUT US</a>
-    <a href="Getfit.html">HOME</a>
+  <a href= "explore.html">EXPLORE</a>
+  <a href=aboutus.html>ABOUT US</a>
+    <a href="index.html">HOME</a>
 </div>
     <div class="polaroid">
-        <a href="weight.html">
+        <a href="weights.html">
   <img src="images/weights.jpg" alt="Weight Training" style="width:100%">
   <div class="containerE">
   <p>WEIGHTS</p>
@@ -26,7 +26,7 @@
 </div>
 
 <div class="polaroid">
-<a href="phones/phone.html">
+<a href="phone.html">
   <img src="images/phone.jpg" alt="Phones" style="width:100%">
   <div class="containerE">
   
@@ -38,11 +38,11 @@
 
     
 <div class="polaroid">
-            <a href="weights.html">
+            <a href="treadmill.html">
 
   <img src="images/treadmill.jpg" alt="Treadmill" style="width:100%">
   <div class="containerE">
-  <p>TREADMILL</p>
+  <p>CARDIO</p>
   </div> 
  </a>
 
