--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
     
 
 <div class="topnav">
-  <a href="#contact">CONTACT US</a>
+  <a href="contactus.html">CONTACT US</a>
   <a href= "explore.html">EXPLORE</a>
-  <a href="#about">ABOUT US</a>
-    <a href="#home">HOME</a>
+  <a href="aboutus.html">ABOUT US</a>
+    <a href="index.html">HOME</a>
 
 </div>
 <div class="container"> 
    <img src="images/giphy.gif" alt="TreadmillFail" style="width: 100%; opacity: 0.5"> 
-      <div class="center">Get fit with us<br>(or not)</div>    
+    <div class="center">GET FIT WITH US
+        <div class="smallHead">(OR NOT)</div>
+    
+    </div>
     </div>
 
 </body>
