--- a/explore.html
+++ b/explore.html
@@ -11,7 +11,7 @@
 <body>
     
     <div class="topnav">
-  <a href="#contact">CONTACT US</a>
+  <a href="contactus.html">CONTACT US</a>
   <a href= "explore.html">EXPLORE</a>
   <a href=aboutus.html>ABOUT US</a>
     <a href="index.html">HOME</a>
