--- a/contactus.html
+++ b/contactus.html
@@ -13,10 +13,10 @@
     
 
 <div class="topnav">
-  <a href="#contact.html">CONTACT US</a>
+  <a href="contactus.html">CONTACT US</a>
   <a href= "explore.html">EXPLORE</a>
-  <a href="#aboutus">ABOUT US</a>
-    <a href="#home">HOME</a>
+  <a href="aboutus.html">ABOUT US</a>
+    <a href="index.html">HOME</a>
     </div>
     </body>
 </html>
