--- a/explore.html
+++ b/explore.html
@@ -13,7 +13,7 @@
     <div class="topnav">
   <a href="contactus.html">CONTACT US</a>
   <a href= "explore.html">EXPLORE</a>
-  <a href=aboutus.html>ABOUT US</a>
+  <a href="aboutus.html">ABOUT US</a>
     <a href="index.html">HOME</a>
 </div>
     <div class="polaroid">
