--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="main.css">
+      <script type="application/javascript" src="script.js"></script>
+   
 
 </head>
 
 <body>
-    
+ 
 
 <div class="topnav">
-  <a href="contactus.html">CONTACT US</a>
+    <div class="logo">
+        <a href="index.html"><img src="images/logo.png"></a></div>
+  <a href="faqs.html">FAQs</a>
   <a href= "explore.html">EXPLORE</a>
   <a href="aboutus.html">ABOUT US</a>
     <a href="index.html">HOME</a>
@@ -22,7 +26,10 @@
 <div class="container"> 
    <img src="images/giphy.gif" alt="TreadmillFail" style="width: 100%; opacity: 0.5"> 
     <div class="center">GET FIT WITH US
-        <div class="smallHead">(OR NOT)</div>
+        <div class="smallHead">(OR NOT)
+        </div>
+        <a href="aboutus.html"><p>Learn More</p></a>
+<span style="cursor:pointer"></span>
     
     </div>
     </div>
